<resources>
    <string name="app_name">Reminder</string>
    <string name="title_activity_lock_screen">LockScreenActivity</string>
    <string name="button_LockScreenOK">OK</string>
    <string name="button_LockScreenCancel">Cancel</string>
    <string name="word_calendar">달력</string>
    <string name="word_memoManage">메모보기</string>
    <string name="word_writeMemo">일기쓰기</string>
    <string name="word_timeline">타임라인</string>
    <string name="submit">저장</string>
    <string name="lock_screen">잠금화면</string>
    <string name="search">검색</string>
    <string name="settings">설정</string>
    <string name="tilde">~</string>

    <string name="memo_all">전부</string>
    <string name="memo_term">기간</string>
    <string name="memo_question">질문</string>

</resources>
