<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="192dp"
    android:layout_height="match_parent"
    android:background="@color/titlePurple"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/text_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="HOON" />

            <TextView
                android:id="@+id/text_userEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="yeonhunkim@mensakorea.org" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_menu_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search" />

                <Button
                    android:id="@+id/button_menu_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/button_menu_writememo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/word_writeMemo" />

    <Button
        android:id="@+id/memo_mamage_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/word_memoManage" />

    <Button
        android:id="@+id/button_menu_timeline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/word_timeline" />

</LinearLayout>